name:                quota-query
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/itkovian/quota-query#readme
license:             BSD3
license-file:        LICENSE
author:              Andy Georges <itkovian@gmail.com>
maintainer:          Andy Georges <itkovian@gmail.com>
copyright:           MIT
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Query
                     , Quota
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bloodhound
                     , cmdargs
                     , containers
                     , text
                     , time
  default-language:    Haskell2010

executable quota-query
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , bloodhound
                     , cmdargs
                     , containers
                     , http-client
                     , quota-query
                     , text
                     , time
                     , vector
  default-language:    Haskell2010

test-suite quota-query-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , quota-query
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/itkovian/quota-query
